[package]
name = "ambientsensor"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"

[dependencies]
bme280-multibus = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1"
eeprom25aa02e48 = "0.2"
embedded-hal = "0.2"
heapless = "0.7"
log = { version = "0.4", features = ["release_max_level_warn"] }
stm32f0xx-hal = { version = "0.18", features = ["stm32f070xb", "rt"] }
systick-monotonic = "1"

[dependencies.w5500-dhcp]
git = "https://github.com/newAM/w5500-rs"
rev = "1a70a47608241de4f853eac3bbbe0a8f53c86ef1"
features = ["embedded-hal", "log"]

[dependencies.w5500-mqtt]
git = "https://github.com/newAM/w5500-rs"
rev = "1a70a47608241de4f853eac3bbbe0a8f53c86ef1"
features = ["embedded-hal", "log"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = true
